Update CI to Java11