@@ -83,16 +83,6 @@ function fixBuildVersion {
   echo "Project Version: $PROJECT_VERSION"
 }
 
-#
-# Configure Maven settings and install some script utilities
-#
-function configureTravis {
-  mkdir -p ~/.local
-  curl -sSL https://github.com/SonarSource/travis-utils/tarball/v56 | tar zx --strip-components 1 -C ~/.local
-  source ~/.local/bin/install
-}
-configureTravis
-
 case "$TARGET" in
 
 BUILD)
@@ -127,10 +117,6 @@ BUILD)
           -Dmaven.javadoc.skip=true \
           -Dmaven.ut.reuseForks=true -Dmaven.it.reuseForks=false \
           -Djava.awt.headless=true
-
-	MAVEN_OPTS="$MAVEN_OPTS -noverify --add-modules java.xml.bind"
-    mvn coveralls:report \
-          $MAVEN_ARGS
 
   elif [[ "$TRAVIS_BRANCH" == "branch-"* ]] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
     echo 'Build release branch'
